# opro2_clean

./: .gitignore  CLAUDE.md  INTEGRITY_REPORT_FINAL.md  MANIFEST.md  README.md  REGENERATION_GUIDE.md  RUN_PIPELINE.md  SCRIPTS_AUDIT.md  SCRIPTS_OFFICIAL.md  SNR_THRESHOLD_INVESTIGATION.md  STATISTICAL_ANALYSIS_GUIDE.md  STATISTICAL_ANALYSIS_IMPLEMENTATION.md  STATISTICAL_ANALYSIS_STATUS.md  VERIFICATION_CORRECTION.md  VERIFICATION_REPORT_DATASET.md  VERIFICATION_REPORT_DEGRADATIONS.md  VERIFICATION_REPORT_EXPERIMENTAL.md  VERIFICATION_REPORT_METRICS.md  VERIFICATION_REPORT_OPTIMIZATION.md  VERIFICATION_REPORT_PROMPTING.md  VERIFICATION_REPORT_SPLITS.md  data  main.tex  pyproject.toml  requirements.txt  test_open_prompts.py
configs/: pipeline_config.yaml
paper_artifacts/: README_Fig01.md
paper_artifacts_qwen3/: COMPARATIVE_REPORT.md  summary.json
prompts/: open_descriptive_seeds.json
scripts/: compute_psychometric.py  evaluate_simple.py  finetune_qwen_audio.py  fix_base_opro_open.sh  fix_failed_stages.sh  generate_error_profile.py  generate_eval_set_summary.py  generate_figure1_degradation_bank.py  generate_figures.py  generate_figures_simple.py  generate_final_verification_log.py  generate_overall_performance.py  generate_prompt_analysis.py  generate_psychometric_artifacts.py  generate_results3_primary_comparisons.py  generate_robustness_by_condition.py  generate_robustness_figures_4config.py  generate_thresholds_figure_4config.py  opro_classic_optimize.py  opro_post_ft_v2.py  run_complete_pipeline.py  run_experimental_descriptive.sh  run_opro_varied_complete.sh  statistical_analysis.py  verify_data_integrity.py
slurm/: 00_run_complete_pipeline.job  01_finetune_lora.job  02_opro_base.job  03_opro_lora.job  04_eval_base.job  05_eval_lora.job  06_eval_base_opro.job  test_cuda.job  (+21 more)
(+33 files in other folders)
